--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Chat Online</title>
+    <title>Chat Railway</title>
     <style>
         * { box-sizing: border-box; }
-        body { font-family: sans-serif; background: #0d1117; color: white; margin: 0; display: flex; flex-direction: column; height: 100vh; }
-        header { padding: 15px; background: #161b22; text-align: center; border-bottom: 1px solid #30363d; color: #58a6ff; font-weight: bold; }
-        #messages { list-style: none; padding: 20px; flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; }
-        #messages li { padding: 12px; border-radius: 12px; max-width: 85%; word-wrap: break-word; background: #21262d; }
-        #messages li.me { align-self: flex-end; background: #238636; }
-        #form { display: flex; padding: 15px; background: #161b22; gap: 10px; }
-        #input { flex: 1; padding: 12px; border-radius: 8px; border: 1px solid #30363d; background: #0d1117; color: white; outline: none; }
-        #btn { background: #238636; color: white; border: none; padding: 0 20px; border-radius: 8px; cursor: pointer; font-weight: bold; }
+        body { font-family: -apple-system, system-ui, sans-serif; background: #09090b; color: #ffffff; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
+        header { padding: 15px; background: #18181b; text-align: center; border-bottom: 1px solid #27272a; font-weight: bold; color: #3b82f6; }
+        #messages { list-style: none; padding: 15px; flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 8px; }
+        #messages li { padding: 10px 14px; border-radius: 12px; max-width: 80%; background: #27272a; font-size: 15px; line-height: 1.4; border: 1px solid #3f3f46; }
+        #messages li.me { align-self: flex-end; background: #2563eb; border-color: #3b82f6; }
+        #form { display: flex; padding: 12px; background: #18181b; border-top: 1px solid #27272a; padding-bottom: calc(12px + env(safe-area-inset-bottom)); }
+        #input { flex: 1; padding: 12px; border-radius: 10px; border: 1px solid #27272a; background: #09090b; color: white; outline: none; font-size: 16px; }
+        #btn { background: #2563eb; color: white; border: none; padding: 0 18px; border-radius: 10px; margin-left: 8px; cursor: pointer; font-weight: 600; }
     </style>
 </head>
 <body>
-    <header>Chat Global</header>
+    <header>Chat Privado Online</header>
     <ul id="messages"></ul>
     <form id="form">
         <input id="input" autocomplete="off" placeholder="Mensagem..." />
         <button id="btn">Enviar</button>
     </form>
-
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
