--- a/index.html
+++ b/index.html
@@ -3,48 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Chat Railway</title>
+    <title>Chat Fale Comigo</title>
     <style>
-        * { box-sizing: border-box; }
-        body { font-family: -apple-system, system-ui, sans-serif; background: #09090b; color: #ffffff; margin: 0; display: flex; flex-direction: column; height: 100vh; overflow: hidden; }
-        header { padding: 15px; background: #18181b; text-align: center; border-bottom: 1px solid #27272a; font-weight: bold; color: #3b82f6; }
-        #messages { list-style: none; padding: 15px; flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 8px; }
-        #messages li { padding: 10px 14px; border-radius: 12px; max-width: 80%; background: #27272a; font-size: 15px; line-height: 1.4; border: 1px solid #3f3f46; }
-        #messages li.me { align-self: flex-end; background: #2563eb; border-color: #3b82f6; }
-        #form { display: flex; padding: 12px; background: #18181b; border-top: 1px solid #27272a; padding-bottom: calc(12px + env(safe-area-inset-bottom)); }
-        #input { flex: 1; padding: 12px; border-radius: 10px; border: 1px solid #27272a; background: #09090b; color: white; outline: none; font-size: 16px; }
-        #btn { background: #2563eb; color: white; border: none; padding: 0 18px; border-radius: 10px; margin-left: 8px; cursor: pointer; font-weight: 600; }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #0d1117; color: white; height: 100vh; display: flex; flex-direction: column; }
+        header { padding: 15px; background: #161b22; text-align: center; border-bottom: 1px solid #30363d; color: #58a6ff; font-weight: bold; }
+        #messages { list-style: none; padding: 15px; flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; }
+        #messages li { padding: 10px 14px; border-radius: 15px; max-width: 80%; word-wrap: break-word; background: #21262d; border: 1px solid #30363d; font-size: 16px; }
+        #messages li.me { align-self: flex-end; background: #238636; border-color: #2ea043; }
+        #form { display: flex; padding: 10px; background: #161b22; border-top: 1px solid #30363d; padding-bottom: env(safe-area-inset-bottom); }
+        #input { flex: 1; padding: 12px 15px; border: 1px solid #30363d; border-radius: 20px; background: #0d1117; color: white; outline: none; font-size: 16px; }
+        #btn { background: #238636; color: white; border: none; padding: 0 20px; border-radius: 20px; margin-left: 8px; cursor: pointer; font-weight: bold; }
     </style>
 </head>
 <body>
-    <header>Chat Privado Online</header>
+    <header>Fale Comigo ● Online</header>
     <ul id="messages"></ul>
     <form id="form">
-        <input id="input" autocomplete="off" placeholder="Mensagem..." />
+        <input id="input" autocomplete="off" placeholder="Digite uma mensagem..." />
         <button id="btn">Enviar</button>
     </form>
+
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
-        const form = document.getElementById('form');
-        const input = document.getElementById('input');
-        const messages = document.getElementById('messages');
+        const messagesUl = document.getElementById('messages');
         const myId = "User_" + Math.floor(Math.random() * 1000);
 
-        form.addEventListener('submit', (e) => {
+        function renderMsg(data) {
+            const li = document.createElement('li');
+            li.textContent = `${data.sender}: ${data.text}`;
+            if (data.sender === myId) li.classList.add('me');
+            messagesUl.appendChild(li);
+            messagesUl.scrollTop = messagesUl.scrollHeight;
+        }
+
+        socket.on('previous messages', (msgs) => msgs.forEach(renderMsg));
+        socket.on('chat message', renderMsg);
+
+        document.getElementById('form').addEventListener('submit', (e) => {
             e.preventDefault();
+            const input = document.getElementById('input');
             if (input.value.trim()) {
                 socket.emit('chat message', { sender: myId, text: input.value });
                 input.value = '';
             }
-        });
-
-        socket.on('chat message', (data) => {
-            const li = document.createElement('li');
-            li.textContent = `${data.sender}: ${data.text}`;
-            if (data.sender === myId) li.classList.add('me');
-            messages.appendChild(li);
-            messages.scrollTop = messages.scrollHeight;
         });
     </script>
 </body>
