--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Chat Privado - Fale Comigo</title>
+    <title>Chat Privado - Lulu & Dominic</title>
     <style>
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body { font-family: 'Segoe UI', sans-serif; background: #0d1117; color: white; height: 100vh; overflow: hidden; }
         
-        /* TELA DE LOGIN */
         #login-screen {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: #0d1117; display: flex; flex-direction: column;
-            justify-content: center; align-items: center; z-index: 100;
+            background: #0d1117; display: flex; justify-content: center; align-items: center; z-index: 100;
         }
         .login-box {
             background: #161b22; padding: 30px; border-radius: 15px;
@@ -26,15 +24,15 @@
         .btn-entrar {
             width: 100%; padding: 12px; background: #238636;
             color: white; border: none; border-radius: 8px;
-            cursor: pointer; font-weight: bold; margin-top: 10px;
+            cursor: pointer; font-weight: bold;
         }
 
-        /* CHAT (ESCONDIDO INICIALMENTE) */
         #chat-container { display: none; height: 100vh; flex-direction: column; }
-        header { padding: 15px; background: #161b22; border-bottom: 1px solid #30363d; text-align: center; }
+        header { padding: 15px; background: #161b22; border-bottom: 1px solid #30363d; text-align: center; font-weight: bold; color: #58a6ff; }
         #messages { list-style: none; padding: 20px; flex: 1; overflow-y: auto; display: flex; flex-direction: column; gap: 10px; }
-        #messages li { padding: 10px 15px; border-radius: 15px; max-width: 80%; background: #21262d; border: 1px solid #30363d; }
+        #messages li { padding: 10px 15px; border-radius: 15px; max-width: 80%; background: #21262d; border: 1px solid #30363d; position: relative; }
         #messages li.me { align-self: flex-end; background: #238636; border-color: #2ea043; }
+        
         #form { display: flex; padding: 15px; background: #161b22; border-top: 1px solid #30363d; }
         #input { flex: 1; padding: 12px; border-radius: 20px; border: 1px solid #30363d; background: #0d1117; color: white; outline: none; }
         #send-btn { background: #238636; color: white; border: none; padding: 0 20px; border-radius: 20px; margin-left: 8px; cursor: pointer; }
@@ -45,24 +43,20 @@
     <div id="login-screen">
         <div class="login-box">
             <h2 style="color: #58a6ff; margin-bottom: 20px;">Fale Comigo ❤️</h2>
-            <label>Quem é você?</label>
             <select id="user-select">
                 <option value="Lulu">Lulu</option>
                 <option value="Dominic">Dominic</option>
             </select>
-            <input type="password" id="pass-input" placeholder="Digite a senha...">
-            <button class="btn-entrar" onclick="fazerLogin()">Entrar no Chat</button>
-            <p id="error-msg" style="color: #f85149; font-size: 12px; margin-top: 10px; display: none;">Senha incorreta!</p>
+            <input type="password" id="pass-input" placeholder="Senha secreta...">
+            <button class="btn-entrar" onclick="fazerLogin()">Entrar</button>
         </div>
     </div>
 
     <div id="chat-container">
-        <header>
-            <span id="user-display" style="color: #58a6ff; font-weight: bold;"></span> ● Online
-        </header>
+        <header id="user-display"></header>
         <ul id="messages"></ul>
         <form id="form">
-            <input id="input" autocomplete="off" placeholder="Escreva para seu amor..." />
+            <input id="input" autocomplete="off" placeholder="Digite sua mensagem..." />
             <button id="send-btn">Enviar</button>
         </form>
     </div>
@@ -80,24 +74,24 @@
                 currentUser = user;
                 document.getElementById('login-screen').style.display = 'none';
                 document.getElementById('chat-container').style.display = 'flex';
-                document.getElementById('user-display').textContent = currentUser;
+                document.getElementById('user-display').textContent = `Conectado como: ${currentUser}`;
             } else {
-                document.getElementById('error-msg').style.display = 'block';
+                alert("Senha errada, tente novamente!");
             }
         }
 
         const messagesUl = document.getElementById('messages');
-        const form = document.getElementById('form');
-        const input = document.getElementById('input');
 
         function renderMsg(data) {
             const li = document.createElement('li');
-            li.innerHTML = `<strong style="color: ${data.sender === 'Lulu' ? '#ff79c6' : '#8be9fd'};">${data.sender}:</strong> ${data.text}`;
+            const color = data.sender === 'Lulu' ? '#ff79c6' : '#8be9fd';
+            li.innerHTML = `<strong style="color: ${color};">${data.sender}:</strong> ${data.text}`;
             if (data.sender === currentUser) li.classList.add('me');
             messagesUl.appendChild(li);
             messagesUl.scrollTop = messagesUl.scrollHeight;
         }
 
+        // Recebe o histórico do servidor assim que conecta
         socket.on('previous messages', (msgs) => {
             messagesUl.innerHTML = '';
             msgs.forEach(renderMsg);
@@ -105,8 +99,9 @@
 
         socket.on('chat message', renderMsg);
 
-        form.addEventListener('submit', (e) => {
+        document.getElementById('form').addEventListener('submit', (e) => {
             e.preventDefault();
+            const input = document.getElementById('input');
             if (input.value.trim()) {
                 socket.emit('chat message', { sender: currentUser, text: input.value });
                 input.value = '';
